--- a/themes/material.css
+++ b/themes/material.css
@@ -200,6 +200,7 @@ dialog {
   box-sizing: border-box;
   transition: transform 300ms cubic-bezier(0.0, 0.0, 0.2, 1);
   border: 1px solid #a9a9a9;
+  color: inherit;
   background: white;
   box-shadow: var(--elevation-24);
   text-transform: none;
